...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventHeaderET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nagłówek wydarzenia" />
            </com.google.android.material.textfield.TextInputLayout>


...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_event_header" />

            <EditText
                android:id="@+id/dateET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_background"
                android:paddingStart="5sp"
...
                android:layout_marginTop="8dp"
                android:text="Czas rozpoczęcia:"
                app:layout_constraintStart_toEndOf="@+id/dataInfo"
                app:layout_constraintTop_toBottomOf="@+id/text_input_event_header" />

            <EditText
                android:id="@+id/timeET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_background"
                android:paddingStart="5sp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeET" />

            <EditText
                android:id="@+id/eventDescET"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_background"
...
                app:errorTextAppearance="@style/error_appearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ticketsLink">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/placeNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeName" />

            </com.google.android.material.textfield.TextInputLayout>

...
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/search_icon_black" />

                    <EditText
                        android:id="@+id/searchPlaceET"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toRightOf="@id/ic_magnify"
...
