...
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="Brak"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comingArtistEventsRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <TextView
                android:id="@+id/pastEventsInfo"
...
