...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeAddressInfo"
        app:srcCompat="@drawable/place_icon_black" />


    <Button
        android:id="@+id/addEventBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/buttonColor"
...
