...
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/search_icon_black" />

        <EditText
            android:id="@+id/searchEventArtistET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:singleLine="true"
            android:layout_marginEnd="5dp"
...
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/noSearchedArtists"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/artistsInSearchRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />


            <TextView
...
