...
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/default_avatar" />

                <TextView
                    android:id="@+id/artistNameTV"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="name"
                    android:textColor="@color/black"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/genresInfo" />

                <ImageButton
                    android:id="@+id/addToFavBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@null"
                    app:layout_constraintEnd_toEndOf="parent"
...
