...
        android:paddingBottom="5dp"
        android:text="wydarzenia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/favouritesArtistsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:background="@color/buttonColor"
        android:drawableBottom="@drawable/start_icon_black"
...
